--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,10 @@
 # physicell
 *.o
 *.exe
+ALL_CITATIONS.txt
 main-backup.cpp
 Makefile-backup
+output/
 PhysiCell_settings-backup.xml
+project
 pmb_debug.log
